added bootstrap and font

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Webpack Intro</h1>
+  <button id="button" class="btn btn-outline-warning">Here's a button</button>
   
 </body>
 </html>
